kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: averter
  namespace: canister
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: api.canister.me
      http:
        paths:
          - pathType: Prefix
            path: /v1(/|$)(.*)
            backend:
              service:
                name: averter
                port:
                  number: 3000
  tls:
    - hosts:
        - 'api.canister.me'
      secretName: api-tls
